--- a/subnet.yaml
+++ b/subnet.yaml
@@ -6,7 +6,7 @@ description: >
 imports:
   - http://www.getcloudify.org/spec/cloudify/4.3/types.yaml
   - plugin:cloudify-awssdk-plugin
-  - plugin:cloudify-utilities-plugin
+  - plugin:cloudify-utilities-plugin?version=1.9.1
 
 inputs:
  
