--- a/elb.yaml
+++ b/elb.yaml
@@ -120,13 +120,7 @@ node_templates:
     properties:
       client_config: *client_config
       use_external_resource: true
-      resource_config:
-        kwargs:
-    interfaces:
-      cloudify.interfaces.lifecycle:
-        create:
-          inputs:
-            aws_resource_id: { get_input: subnet1 } 
+      resource_id: { get_input: subnet1 } 
     relationships:
 
   sub2:
@@ -134,13 +128,7 @@ node_templates:
     properties:
       client_config: *client_config
       use_external_resource: true
-      resource_config:
-        kwargs:
-    interfaces:
-      cloudify.interfaces.lifecycle:
-        create:
-          inputs:
-            aws_resource_id: { get_input: subnet2 } 
+      resource_id: { get_input: subnet2 } 
     relationships:
 
   sub3:
@@ -148,13 +136,7 @@ node_templates:
     properties:
       client_config: *client_config
       use_external_resource: true
-      resource_config:
-        kwargs:
-    interfaces:
-      cloudify.interfaces.lifecycle:
-        create:
-          inputs:
-            aws_resource_id: { get_input: subnet3 } 
+      resource_id: { get_input: subnet3 } 
     relationships:
 
   inst1:
@@ -164,13 +146,7 @@ node_templates:
         install_method: none
       client_config: *client_config
       use_external_resource: true
-      resource_config:
-        kwargs:
-    interfaces:
-      cloudify.interfaces.lifecycle:
-        create:
-          inputs:
-            aws_resource_id: { get_input: instance1 } 
+      resource_id: { get_input: instance1 } 
     relationships:
       - type: cloudify.relationships.aws.elb.instance.connected_to
         target: classic_elb
@@ -182,13 +158,7 @@ node_templates:
         install_method: none
       client_config: *client_config
       use_external_resource: true
-      resource_config:
-        kwargs:
-    interfaces:
-      cloudify.interfaces.lifecycle:
-        create:
-          inputs:
-            aws_resource_id: { get_input: instance1 } 
+      resource_id: { get_input: instance1 } 
     relationships:
       - type: cloudify.relationships.aws.elb.instance.connected_to
         target: classic_elb
@@ -200,13 +170,7 @@ node_templates:
         install_method: none
       client_config: *client_config
       use_external_resource: true
-      resource_config:
-        kwargs:
-    interfaces:
-      cloudify.interfaces.lifecycle:
-        create:
-          inputs:
-            aws_resource_id: { get_input: instance1 } 
+      resource_id: { get_input: instance1 } 
     relationships:
       - type: cloudify.relationships.aws.elb.instance.connected_to
         target: classic_elb
