--- a/elb.yaml
+++ b/elb.yaml
@@ -5,7 +5,7 @@ description: >
 
 imports:
   - http://www.getcloudify.org/spec/cloudify/4.3/types.yaml
-  - plugin:cloudify-awssdk-plugin
+  - 'plugin:cloudify-awssdk-plugin?version=2.5.0&distribution=centos'
   - plugin:cloudify-utilities-plugin
 
 inputs:
